--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <ul>
-    	  <li><a href="#">Главная</a></li>
-    	  <li><a href="#">Test</a></li>
-    	  <li><a href="#">About</a></li>
-    	  <li><a href="#">Conract</a></li>
-    <ul>	
+     <li><a href="#">Главная</a></li>
+     <li><a href="#">Test</a></li>
+     <li><a href="#">About</a></li>
+     <li><a href="#">Conract</a></li>
+    <ul>
+      <h1>Hello </h1>
+      <h2>Дополнительный заголовок</h2>	
   </body>
 </html>
